Enhance TUIClient with sidebar navigation and search functionality