@@ -3,21 +3,41 @@ package dev.nonvocal.notes.tui;
 import com.googlecode.lanterna.TerminalSize;
 import com.googlecode.lanterna.TextColor;
 import com.googlecode.lanterna.gui2.*;
+import com.googlecode.lanterna.input.KeyStroke;
+import com.googlecode.lanterna.input.KeyType;
 import com.googlecode.lanterna.screen.Screen;
 import com.googlecode.lanterna.screen.TerminalScreen;
 import com.googlecode.lanterna.terminal.DefaultTerminalFactory;
 import com.googlecode.lanterna.terminal.Terminal;
 
 import java.io.IOException;
-import java.util.Arrays;
+import java.util.List;
+import java.util.concurrent.atomic.AtomicBoolean;
 
 /**
  * Terminal UI for the Notes application using Lanterna.
+ *
+ * <p>Layout:
+ * <pre>
+ * ┌──[ Notes ]──┬─────────────────────────────────┐
+ * │ All Notes   │                                 │
+ * │ New Note…   │   (content area)                │
+ * │─────────────│                                 │
+ * │ Exit        │                                 │
+ * └─────────────┴─────────────────────────────────┘
+ * </pre>
+ * The sidebar is always visible; the content area updates on selection.
  */
 public class TuiClient {
 
+    /** Fixed width (in columns) of the left sidebar including its border. */
+    private static final int SIDEBAR_WIDTH = 22;
+
     private final Screen screen;
     private final MultiWindowTextGUI gui;
+
+    /** The centre panel whose content is swapped when the user picks a sidebar item. */
+    private Panel contentArea;
 
     public TuiClient() throws IOException {
         Terminal terminal = new DefaultTerminalFactory()
@@ -26,28 +46,133 @@ public class TuiClient {
         this.screen = new TerminalScreen(terminal);
         this.screen.startScreen();
         this.gui = new MultiWindowTextGUI(screen, new DefaultWindowManager(),
-                new EmptySpace(TextColor.ANSI.BLUE));
+                new EmptySpace(TextColor.ANSI.BLACK_BRIGHT));
     }
 
     public void start() throws IOException {
+        // Full-screen, no window decorations – the inner borders provide structure.
         BasicWindow window = new BasicWindow("Notes TUI");
-        window.setHints(Arrays.asList(Window.Hint.CENTERED));
+        window.setHints(List.of(Window.Hint.FULL_SCREEN, Window.Hint.NO_DECORATIONS));
 
-        Panel panel = new Panel(new LinearLayout(Direction.VERTICAL));
-        panel.addComponent(new Label("Welcome to Notes TUI Client"));
-        panel.addComponent(new EmptySpace(new TerminalSize(0, 1)));
+        Panel rootPanel = new Panel(new BorderLayout());
 
-        panel.addComponent(new Button("New Note", () -> showNewNoteDialog(window)));
-        panel.addComponent(new Button("Exit", window::close));
+        // ── Left sidebar ─────────────────────────────────────────────────────
+        Panel sidebarInner = new Panel(new LinearLayout(Direction.VERTICAL));
+        // Invisible spacer that fixes the column width of the sidebar
+        sidebarInner.addComponent(new EmptySpace(new TerminalSize(SIDEBAR_WIDTH - 2, 1)));
 
-        window.setComponent(panel);
+        addSidebarButton(sidebarInner, "All Notes",  this::showAllNotes);
+        addSidebarButton(sidebarInner, "New Note…", this::showNewNoteDialog);
+        addSidebarButton(sidebarInner, "Search…",   this::showSearchDialog);
+        sidebarInner.addComponent(new EmptySpace(new TerminalSize(0, 1)));
+        sidebarInner.addComponent(new Separator(Direction.HORIZONTAL));
+        addSidebarButton(sidebarInner, "Exit", window::close);
+
+        rootPanel.addComponent(
+                sidebarInner.withBorder(Borders.singleLine("Notes")),
+                BorderLayout.Location.LEFT);
+
+        // ── Content area ─────────────────────────────────────────────────────
+        contentArea = new Panel(new LinearLayout(Direction.VERTICAL));
+        showWelcome();
+        rootPanel.addComponent(
+                contentArea.withBorder(Borders.singleLine("")),
+                BorderLayout.Location.CENTER);
+
+        window.setComponent(rootPanel);
+
+        // ── Global keyboard shortcuts ─────────────────────────────────────────
+        window.addWindowListener(new WindowListenerAdapter() {
+            @Override
+            public void onInput(Window basePane, KeyStroke keyStroke, AtomicBoolean deliverEvent) {
+                if (keyStroke.getKeyType() == KeyType.Character
+                        && keyStroke.getCharacter() == 'f'
+                        && keyStroke.isCtrlDown()) {
+                    deliverEvent.set(false); // consume – do not forward to focused component
+                    showSearchDialog();
+                }
+            }
+        });
+
         gui.addWindowAndWait(window);
         screen.stopScreen();
     }
 
-    private void showNewNoteDialog(BasicWindow parent) {
+    // ── Sidebar helpers ───────────────────────────────────────────────────────
+
+    /** Adds a full-width button to a sidebar panel. */
+    private static void addSidebarButton(Panel sidebar, String label, Runnable action) {
+        Button btn = new Button(label, action);
+        btn.setLayoutData(LinearLayout.createLayoutData(LinearLayout.Alignment.Fill));
+        sidebar.addComponent(btn);
+    }
+
+    // ── Content views ─────────────────────────────────────────────────────────
+
+    private void showWelcome() {
+        contentArea.removeAllComponents();
+        contentArea.addComponent(new EmptySpace(new TerminalSize(0, 1)));
+        contentArea.addComponent(new Label("Welcome to Notes TUI Client"));
+        contentArea.addComponent(new EmptySpace(new TerminalSize(0, 1)));
+        contentArea.addComponent(new Label("Select an option from the sidebar."));
+    }
+
+    private void showAllNotes() {
+        contentArea.removeAllComponents();
+        contentArea.addComponent(new EmptySpace(new TerminalSize(0, 1)));
+        contentArea.addComponent(new Label("All Notes"));
+        contentArea.addComponent(new Separator(Direction.HORIZONTAL));
+        contentArea.addComponent(new EmptySpace(new TerminalSize(0, 1)));
+        // TODO: load notes from NoteService
+        contentArea.addComponent(new Label("(No notes yet)"));
+    }
+
+    // ── Dialogs ───────────────────────────────────────────────────────────────
+
+    private void showSearchDialog() {
+        BasicWindow dialog = new BasicWindow("Search Notes  [Ctrl+F]");
+        dialog.setHints(List.of(Window.Hint.CENTERED));
+
+        Panel panel = new Panel(new LinearLayout(Direction.VERTICAL));
+
+        // ── Input row ─────────────────────────────────────────────────────────
+        Panel inputRow = new Panel(new LinearLayout(Direction.HORIZONTAL));
+        inputRow.addComponent(new Label("Find: "));
+        TextBox searchBox = new TextBox(new TerminalSize(34, 1));
+        inputRow.addComponent(searchBox);
+        panel.addComponent(inputRow);
+
+        panel.addComponent(new EmptySpace(new TerminalSize(0, 1)));
+
+        // ── Results ───────────────────────────────────────────────────────────
+        Panel resultsInner = new Panel(new LinearLayout(Direction.VERTICAL));
+        resultsInner.addComponent(new Label("Type a term and press Search."));
+        panel.addComponent(resultsInner.withBorder(Borders.singleLine("Results")));
+
+        panel.addComponent(new EmptySpace(new TerminalSize(0, 1)));
+
+        // ── Buttons ───────────────────────────────────────────────────────────
+        Panel btnRow = new Panel(new LinearLayout(Direction.HORIZONTAL));
+        btnRow.addComponent(new Button("Search", () -> {
+            String query = searchBox.getText().trim();
+            resultsInner.removeAllComponents();
+            if (query.isEmpty()) {
+                resultsInner.addComponent(new Label("Enter a search term."));
+            } else {
+                // TODO: search via NoteService and show matching notes
+                resultsInner.addComponent(new Label("No results for: \"" + query + "\""));
+            }
+        }));
+        btnRow.addComponent(new Button("Close", dialog::close));
+        panel.addComponent(btnRow);
+
+        dialog.setComponent(panel);
+        gui.addWindowAndWait(dialog);
+    }
+
+    private void showNewNoteDialog() {
         BasicWindow dialog = new BasicWindow("New Note");
-        dialog.setHints(Arrays.asList(Window.Hint.CENTERED));
+        dialog.setHints(List.of(Window.Hint.CENTERED));
 
         Panel panel = new Panel(new LinearLayout(Direction.VERTICAL));
         panel.addComponent(new Label("Title:"));
@@ -59,10 +184,8 @@ public class TuiClient {
         panel.addComponent(contentBox);
 
         panel.addComponent(new EmptySpace(new TerminalSize(0, 1)));
-        panel.addComponent(new Button("Save", () -> {
-            // Save note logic here
-            dialog.close();
-        }));
+        // Save note logic here
+        panel.addComponent(new Button("Save",   dialog::close));
         panel.addComponent(new Button("Cancel", dialog::close));
 
         dialog.setComponent(panel);
